--- a/index.html
+++ b/index.html
@@ -421,42 +421,56 @@
 							<!-- Single Testimonial -->
 							<div class="single-testimonial">
 								<div class="testimonial-content">
-									<p> Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, </p>
+									<p>負責教導一年級資訊傳播學概論課程的教授，和藹的系主任。</p>
 								</div>
 								<div class="testimonial-info">
 									<div class="img">
 										<span class="arrow"></span>
-										<img src="images/testimonial1.jpg" class="img-circle" alt="">
+										<img src="https://imgur.com/sLnpvmi.jpg" class="img-circle" alt="">
 									</div>
-									<h6>Trom<span>Founder Hoadas</span></h6>
+									<h6>莊道明<span>副教授兼系主任</span></h6>
 								</div>			
 							</div>
 							<!--/ End Single Testimonial -->
 							<!-- Single Testimonial -->
 							<div class="single-testimonial">
 								<div class="testimonial-content">
-									<p> Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, </p>
+									<p>於106學年度正式退休，原負責教導資訊素養的教授。</p>
 								</div>
 								<div class="testimonial-info">
 									<div class="img">
 										<span class="arrow"></span>
-										<img src="images/testimonial2.jpg" class="img-circle" alt="">
+										<img src="https://imgur.com/RHA1Y1p.jpg" class="img-circle" alt="">
 									</div>
-									<h6>Trom<span>Founder Hoadas</span></h6>
+									<h6>林志鳳<span>副教授</span></h6>
 								</div>			
 							</div>
 							<!--/ End Single Testimonial -->
 							<!-- Single Testimonial -->
 							<div class="single-testimonial">
 								<div class="testimonial-content">
-									<p> Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, </p>
+									<p>負責教導電腦與網路概論、網頁設計等資訊相關課程。</p>
 								</div>
 								<div class="testimonial-info">
 									<div class="img">
 										<span class="arrow"></span>
-										<img src="images/testimonial3.jpg" class="img-circle" alt="">
+										<img src="https://imgur.com/SpuO0vp.jpg" class="img-circle" alt="">
 									</div>
-									<h6>Trom<span>Founder Hoadas</span></h6>
+									<h6>林頌堅<span>助理教授</span></h6>
+								</div>			
+							</div>
+							<!--/ End Single Testimonial -->
+							<!-- Single Testimonial -->
+							<div class="single-testimonial">
+								<div class="testimonial-content">
+									<p>擅長攝影與影像後製，負責教導攝影、影像數位化處理等課程。</p>
+								</div>
+								<div class="testimonial-info">
+									<div class="img">
+										<span class="arrow"></span>
+										<img src="" class="img-circle" alt="">
+									</div>
+									<h6>劉敦瑞<span>助理教授</span></h6>
 								</div>			
 							</div>
 							<!--/ End Single Testimonial -->
@@ -466,60 +480,6 @@
 			</div>
 		</section>
 		<!--/ End Testimonial -->
-
-
-		
-		<!-- Start Statics -->
-		<section id="statics" class="section">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-6 col-sm-12 col-xs-12">
-						<div class="row">
-							<div class="statics">	
-								<div class="col-md-12 col-sm-12 col-xs-12">
-									<h2>World Domination!</h2>
-									<p>Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima.</p>
-								</div>
-								<div class="col-md-6 col-sm-6 col-xs-12 wow fadeIn" data-wow-delay="0.4s">
-									<!-- Static Single -->
-									<div class="static-single">
-										<div class="number"><span class="counter">1300</span></div>
-										<p>Project Complete</p>
-									</div>
-								</div>
-								<!-- End Single -->	
-								<!-- Static Single -->
-								<div class="col-md-6 col-sm-6 col-xs-12 wow fadeIn" data-wow-delay="0.6s">
-									<div class="static-single">
-										<div class="number"><span class="counter">123300</span></div>
-										<p>Support Tiket</p>
-									</div>
-								</div>
-								<!-- End Single -->	
-								<!-- Static Single -->
-								<div class="col-md-6 col-sm-6 col-xs-12 wow fadeIn" data-wow-delay="0.8s">
-									<div class="static-single">
-										<div class="number"><span class="counter">55300</span></div>
-										<p>Global Clients</p>
-									</div>
-								</div>
-								<!-- End Single -->	
-								<!-- Static Single -->
-								<div class="col-md-6 col-sm-6 col-xs-12 wow fadeIn" data-wow-delay="1s">
-									<div class="static-single">
-										<div class="number"><span class="counter">40.99</span><span class="percent">%</span></div>
-										<p>World Domination</p>
-									</div>
-								</div>
-								<!-- End Single -->	
-							</div>
-						</div>
-					</div>					
-				</div>
-			</div>
-			<div class="static-image wow fadeIn"></div>
-		</section>	
-		<!--/ End Statics -->
 		
 		<!-- Start blog -->
 		<section id="blog" class="section">
@@ -527,8 +487,8 @@
 				<div class="row">
 					<div class="col-md-12 col-sm-12 col-xs-12  wow fadeIn">
 						<div class="section-title center">
-							<h2>Our <span>Blog</span></h2>
-							<p>Coordinates for abs potioning the closest positioned parent box of the positioned abs qoning the closes for abs potioning the closest positioned parent.</p>
+							<h2>過往活動<span></span></h2>
+							<p>大學的各式活動多采多姿，其中資傳當然也不例外。<br>點擊圖片可連結至活動相簿，給你滿滿的資傳！</p>
 						</div>
 					</div>
 				</div>
@@ -539,18 +499,12 @@
 								<!-- Single blog -->
 								<div class="single-blog">
 									<div class="blog-head">
-										<img src="images/blog/1.jpg" alt="#">
-										<a href="blog-single.html" class="link"><i class="fa fa-link"></i></a>
+										<img src="https://scontent.ftpe3-1.fna.fbcdn.net/v/t31.0-8/21552008_1450526821689854_6842766489819599701_o.jpg?_nc_cat=0&_nc_eui2=AeFNGh1dVdn3kYiA23j5PIuu3AwhQauvzAHktOy0lZ4YvIplVRAQmoXhjoXMrqBu2xoTGCV_6thz5mtwcV-defYaOiOlEfk1oaT0RrJyyilSAw&oh=ea7c81b8cfd28ed0486a0a6ba4e61df7&oe=5BABDD40" alt="#">
+										<a href="https://www.facebook.com/media/set/?set=a.1450526738356529.1073741881.114238965318653&type=1&l=b1d214d4a0"target=_blank class="link"><i class="fa fa-link"></i></a>
 									</div>
 									<div class="blog-content">
-										<h2><a href="blog-single.html">We create one page business website</a></h2>
-										<div class="meta">
-											<span><i class="fa fa-user"></i>admin</span>
-											<span><i class="fa fa-calendar"></i>19 May</span>
-											<span><i class="fa fa-comments"></i>5 Comments</span>
-										</div>
-										<p>Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanitatis.</p>
-										<a href="blog-single.html" class="btn">Read More<i class="fa fa-angle-double-right"></i></a>
+										<h2><a href="https://www.facebook.com/media/set/?set=a.1450526738356529.1073741881.114238965318653&type=1&l=b1d214d4a0"target=_blank>新生迎新茶會</a></h2>
+										<p>於開學前幾天舉辦，為系上的第一個正式活動。茶會中不僅有各式表演、系所介紹，還會抽出自己的直屬，所以千萬別錯過！</p>
 									</div>
 								</div>	
 								<!--/ End Single blog -->
@@ -559,18 +513,12 @@
 								<!-- Single blog -->
 								<div class="single-blog">
 									<div class="blog-head">
-										<img src="images/blog/2.jpg" alt="#">
-										<a href="blog-single.html" class="link"><i class="fa fa-link"></i></a>
+										<img src="https://scontent.ftpe3-1.fna.fbcdn.net/v/t31.0-8/24172760_1515601571849045_4066871295209723106_o.jpg?_nc_cat=0&_nc_eui2=AeGxQcdUQnE2dj1hn5E2dtXjjMY5fw8Ysj26fJJTvxnle1bPsnQ9CJHtcrGkAL_ANURxha-Ryinu5CwK2-ds--7MLTb41ozXsiabbhvHDSgLow&oh=b6628c818dcbc9675498ff8c23db11ba&oe=5BE8B388" alt="#">
+										<a href="https://www.facebook.com/media/set/?set=a.1515593878516481.1073741882.114238965318653&type=1&l=d888b56420"target=_blank class="link"><i class="fa fa-link"></i></a>
 									</div>
 									<div class="blog-content">
-										<h2><a href="blog-single.html">Super,Clean HTML5 Templates ever you seen!</a></h2>
-										<div class="meta">
-											<span><i class="fa fa-user"></i>admin</span>
-											<span><i class="fa fa-calendar"></i>19 May</span>
-											<span><i class="fa fa-comments"></i>5 Comments</span>
-										</div>
-										<p>Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanitatis.</p>
-										<a href="blog-single.html" class="btn">Read More<i class="fa fa-angle-double-right"></i></a>
+										<h2><a href="https://www.facebook.com/media/set/?set=a.1515593878516481.1073741882.114238965318653&type=1&l=d888b56420"target=_blank>宿營</a></h2>
+										<p>想和同學迅速加深感情嗎？想認識更多學長姐嗎？想欣賞各種表演、遊玩各種精心設計的遊戲嗎？別錯過盛大的宿營！</p>
 									</div>
 								</div>	
 								<!--/ End Single blog -->
@@ -579,18 +527,12 @@
 								<!-- Single blog -->
 								<div class="single-blog">
 									<div class="blog-head">
-										<img src="images/blog/3.jpg" alt="#">
-										<a href="blog-single.html" class="link"><i class="fa fa-link"></i></a>
+										<img src="https://scontent.ftpe3-1.fna.fbcdn.net/v/t1.0-9/31933654_1671567226252478_797232370649399296_o.jpg?_nc_cat=0&_nc_eui2=AeFvK4ZCg_XEiutKcTKQ2dmw7SgzZe4Uhm035Y_5cYqD1iKiDmm18xiVQFcc7QZwtHrmtuVE4tpVQJQ_5Pvnv6BvrFdB3cyRLPGAmpIFZq4gUg&oh=6a2b7c9fb7fab7d5d571d76e706db257&oe=5BB35A92" alt="#">
+										<a href="https://www.facebook.com/media/set/?set=a.1671559626253238.1073741888.114238965318653&type=1&l=aa3c19534d"target=_blank class="link"><i class="fa fa-link"></i></a>
 									</div>
 									<div class="blog-content">
-										<h2><a href="blog-single.html">Responsive Retina Ready Html template</a></h2>
-										<div class="meta">
-											<span><i class="fa fa-user"></i>admin</span>
-											<span><i class="fa fa-calendar"></i>19 May</span>
-											<span><i class="fa fa-comments"></i>5 Comments</span>
-										</div>
-										<p>Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanitatis.</p>
-										<a href="blog-single.html" class="btn">Read More<i class="fa fa-angle-double-right"></i></a>
+										<h2><a href="https://www.facebook.com/media/set/?set=a.1671559626253238.1073741888.114238965318653&type=1&l=aa3c19534d"target=_blank>啦啦隊比賽</a></h2>
+										<p>準備期漫長的啦啦比賽，無論是道具組或舞蹈組，在比賽前全都會竭盡心力！想和同學一起為了某件事揮灑汗水嗎，參加啦啦比賽就對了！</p>
 									</div>
 								</div>	
 								<!--/ End Single blog -->
@@ -608,38 +550,14 @@
 				<div class="row">
 					<div class="col-md-12 col-sm-12 col-xs-12 wow fadeIn">
 						<div class="section-title center">
-							<h2>Contact <span>US</span></h2>
-							<p>Coordinates for abs potioning the closest positioned parent box of the positioned abs qoning the closes for abs potioning the closest positioned parent.</p>
+							<h2>聯絡我們 <span></span></h2>
+							<p>想找我們的話，看這裡！</p>
 						</div>
 					</div>
 				</div>
 				<!-- Google Map -->
-				<div class="row">
-					<!-- Contact Form -->
-					<div class="col-md-5 col-sm-5 col-xs-12">
-						<form class="form" method="post" action="mail/mail.php">
-							<div class="form-group">
-								<input type="text" name="name" placeholder="Name" required="required">
-                            </div>
-							<div class="form-group">
-								<input type="email" name="email" placeholder="Email" required="required">
-                            </div>
-							<div class="form-group">
-								<input type="text" name="subject" placeholder="Subject" required="required">
-                            </div>
-							<div class="form-group">
-								<textarea name="message" rows="6" placeholder="Message" ></textarea>
-                            </div>
-							<div class="form-group">	
-								<button type="submit" class="button primary"><i class="fa fa-send"></i>Submit</button>
-                            </div>
-						</form>
-					</div>
-					<!--/ End Contact Form -->
+				<P Align=center><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14464.681098962319!2d121.53395441977538!3d24.994329450000006!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442aa077249f59b%3A0xfb5860fd7348f354!2z5LiW5paw5aSn5a24!5e0!3m2!1szh-TW!2stw!4v1530254805078" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe></p>
 				</div>
-			</div>
-			<div class="gmap">
-				<div class="map"></div>
 			</div>
 		</section>
 		<!--/ End Clients Us -->
@@ -650,8 +568,8 @@
 				<div class="row">
 					<div class="col-md-12 col-sm-12 col-xs-12 wow fadeIn">
 						<div class="section-title center">
-							<h2>Our <span>Location</span></h2>
-							<p>Coordinates for abs potioning the closest positioned parent box of the positioned abs qoning the closes for abs potioning the closest positioned parent.</p>
+							<h2> <span></span></h2>
+							<p></p>
 						</div>
 					</div>
 				</div>
@@ -660,8 +578,8 @@
 						<!-- Single Address -->
 						<div class="single-address">
 							<i class="fa fa-phone"></i>
-							<h4>Our Phone</h4>
-							<p>+8801812345678, +8801700000123</p>
+							<h4>電話</h4>
+							<p>(02)2236-8225轉3282<br>傳真：(02)2236-1722 </p>
 						</div>
 						<!--/ End Single Address -->
 					</div>
@@ -669,8 +587,8 @@
 						<!-- Single Address -->
 						<div class="single-address active">
 							<i class="fa fa-phone"></i>
-							<h4>Office Location</h4>
-							<p>240, Khilgaon Dhaka 1230.</p>
+							<h4>地址</h4>
+							<p>臺北市11604 文山區木柵路一段17巷1號<br>資傳系辦位於R棟（舍我樓）九樓</p>
 						</div>
 						<!--/ End Single Address -->
 					</div>
@@ -678,8 +596,8 @@
 						<!-- Single Address -->
 						<div class="single-address">
 							<i class="fa fa-phone"></i>
-							<h4>Corporate Email</h4>
-							<p>info@Bizpro.com, support@Bizpro.com</p>
+							<h4>Email</h4>
+							<p> saintlin@cc.shu.edu.tw <br>（網管）</p>
 						</div>
 						<!--/ End Single Address -->
 					</div>
@@ -688,70 +606,7 @@
 			</div>
 		</section>
 		<!--/ End Location -->
-		
-		<!-- Newslatter -->
-		<div id="newslatter" class="wow fadeIn">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-6 col-sm-6 col-xs-12">
-						<h2>Signup Newslatter</h2>
-						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry'sstandard dummy text</p>
-					</div>
-					<div class="col-md-6 col-sm-6 col-xs-12">
-						<div class="newslatter">
-							<form>
-								<input type="email" placeholder="type your email">
-								<button type="submit" class="button primary"><i class="fa fa-paper-plane"></i></button>
-							</form>	
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!--/ End Newslatter -->
-		
-		<!-- Start Clients -->
-		<div id="clients" class="section wow fadeIn">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-12">
-						<div class="clients-carousel">
-							<!-- Single Clients -->
-							<div class="single-client">
-								<img src="images/client1.png" alt="" class="img-responsive">
-							</div>
-							<!--/ Single Clients -->
-							<!-- Single Clients -->
-							<div class="single-client">
-								<img src="images/client2.png" alt="" class="img-responsive">
-							</div>
-							<!--/ Single Clients -->
-							<!-- Single Clients -->
-							<div class="single-client">
-								<img src="images/client3.png" alt="" class="img-responsive">
-							</div>
-							<!--/ Single Clients -->
-							<!-- Single Clients -->
-							<div class="single-client">
-								<img src="images/client4.png" alt="" class="img-responsive">
-							</div>
-							<!--/ Single Clients -->
-							<!-- Single Clients -->
-							<div class="single-client">
-								<img src="images/client5.png" alt="" class="img-responsive">
-							</div>
-							<!--/ Single Clients -->
-							<!-- Single Clients -->
-							<div class="single-client">
-								<img src="images/client6.png" alt="" class="img-responsive">
-							</div>		
-							<!--/ Single Clients -->
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!--/ End Clients -->		
+			
 	
 		<!-- Start Footer -->
 		<footer id="footer" class="wow fadeIn">
