--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
+
     <head>
         <!-- Meta tag -->
 		<meta charset="utf-8">
@@ -99,7 +100,7 @@
 					<div class="col-md-2 col-sm-12 col-xs-12">
 						<!-- Logo -->
 						<div class="logo">
-							<a href="index.html"><span>biz</span>pro</a>
+							<a href="index.html"><span>SHU</span>ICS</a>
 						</div>
 						<!--/ End Logo -->
 					</div>
@@ -617,7 +618,7 @@
 						<div class="col-md-12 col-sm-12 col-xs-12 ">
 							<!-- Logo -->
 							<div class="logo">
-								<a href="index.html"><span>Biz</span>Pro</a>
+								<a href="index.html"><span>SHU</span>ICS</a>
 							</div>	
 							<!--/ End Logo -->
 							<!-- Social -->
